--- a/finalproject/herb/templates/index.html
+++ b/finalproject/herb/templates/index.html
@@ -1,4 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
-    Hello index
-{% endblock  %}
+        
+    <div class="container-fluid">
+        <form class="form-inline form-control-lg justify-content-center" method="GET" action="{% url 'index' %}">
+            <div class="form-group">
+                <label for="searchbox">ค้นหาบทความ :</label>
+                <input type="text" class="form-control ml-3" name="searchbox" placeholder="ค้นหาบทความที่ต้องการ" value="{{searchbox}}">
+            </div>
+            <button type="submit" class="btn btn-info ml-3">ค้นหา</button>             
+            {% csrf_token %}
+        </form>
+        <br/>
+        <hr>
+    </div>
+        {% for message in messages %}
+            <div class="alert alert-success h3 text-center">{{message}}</div>
+        {% endfor %}     
+        <div class="container">
+            <div class="row">           
+            {% for post in posts %} 
+                <div class="mx-auto col p-2" data-aos="fade-right">
+                    <div class="card" style="width: 16.3rem; height:22em;">  
+                        <div class="card-body">                
+                            <h5 class="card-head text-left" style="display: block;/* or inline-block */
+                            text-overflow: ellipsis; word-wrap: break-word; overflow: hidden;  
+                            max-height: 5em; line-height: 1.8em;">✎ {{ product.name }} </h5>
+                        </div>                     
+                    </div>
+                </div>
+            {% endfor %}                                  
+            </div>                
+        </div>       
+        <br>
+{% endblock %}
+{% block footer %}
+{% endblock %}
