--- a/finalproject/herb/templates/login.html
+++ b/finalproject/herb/templates/login.html
@@ -1,4 +1,34 @@
 {% extends 'base.html' %}
+
 {% block content %}
-    login
+
+    <h1>Login</h1>
+        <div class="container-fluid border shadow p-3 mb-5 bg-white rounded-lg" data-aos="fade-up">
+        <h1 class="text-center text-info">ล็อกอินเข้าสู่ระบบ | Sign In</h1>
+        <hr><br>
+        <form method="POST" action="">
+        {% csrf_token %}
+            <div class="form-group">
+                <label for="username" class="h5 text-info">ชื่อผู้ใช้งาน | Username:</label>
+                <input type="text" class="form-control" id="email" placeholder="Enter Your Username" name="username"
+                    name="username" value="{{username}}" required/>
+            </div>
+            <div class="form-group">
+                <label for="password" class="h5 text-info">รหัสผ่าน | Password:</label>
+                <input type="password" class="form-control" id="password"  placeholder="Enter Your Password"
+                    name="password" value="{{password}}" required/>
+            </div><br>
+            <p class="text-center text-info h5">คุณยังไม่มีบัญชีผู้ใช้งาน ? (Did you don't have any account ?) <br><a class="text-primary" href="{% url 'register' %}">สมัครสมาชิก</a></p>
+            <br>
+            <div class="text-center">
+            {% for message in messages %}
+                <div data-aos="fade-right" class="alert alert-danger">{{message}}</div>
+            {% endfor %}
+            <br>
+            <button type="submit" class="btn btn-info btn-lg col-md-3 " style="margin-right:10px;">✔️ Login</button>
+            <button type="reset" class="btn btn-warning btn-lg col-md-3">⚠️ Reset</button>
+            </div>
+        </form>
+        <br/><br/>
+    </div>
 {% endblock  %}
