--- a/finalproject/templates/base.html
+++ b/finalproject/templates/base.html
@@ -30,9 +30,14 @@
         <a class="nav-link">MyPoll</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Register</a>
+        <a class="nav-link" href="{% url 'register' %}">Register</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'changepassword' %}">changepassword</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+      </li>
     </ul>
   </div>
 </nav>
